<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="80dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edtSongTitle"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:autofillHints="Kiss it better, All the way"
        android:hint="@string/song_title"
        android:inputType="textWebEditText" />

    <EditText
        android:id="@+id/edtArtist"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:autofillHints="Alica Keys, Usher"
        android:hint="@string/artist_name"
        android:inputType="textWebEditText" />

    <EditText
        android:id="@+id/edtRating"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:autofillHints="Rating (1 - 5)"
        android:hint="@string/rating_1_5"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtComment"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:autofillHints="Good, bad or amazing"
        android:hint="@string/comment"
        android:inputType="textWebEditText" />
</LinearLayout>