<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#65346D">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnShowSongs"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/display_songs" />

        <Button
            android:id="@+id/btnAverage"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/show_average_rating" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/back_to_main" />

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="356dp"
            android:layout_height="207dp"
            android:background="#DBB8B8"
            android:padding="10dp"
            android:text="@string/output_will_appear_here"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>