<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VisualLintBounds">

    <ListView
        android:id="@+id/songListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvAverage"
        android:text="@string/average_rating"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAverage"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:text="@string/calculate_average" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:text="@string/back" />
</LinearLayout>

